--- a/features/localization/Language.properties
+++ b/features/localization/Language.properties
@@ -1,4 +1,4 @@
-react_portlet=React Portlet
+react-portlet=React Portlet
 javax.portlet.title.react_portlet=React Portlet
 configuration=Configuration
 context-path=Context Path
